Make it work with github pages

--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
 	<title>Conference captions</title>
 	<meta charset='UTF-8' />
-	<!--<link rel='stylesheet' type='text/css' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css' />-->
-	<link rel='stylesheet' type='text/css' href='/assets/css/bootstrap.css' />
-	<link rel='stylesheet' type='text/css' href='/assets/css/style.css' />
+	<link rel='stylesheet' type='text/css' href='assets/css/bootstrap.css' />
+	<link rel='stylesheet' type='text/css' href='assets/css/style.css' />
 </head>
 
 <body class='mode-wizard'>
@@ -37,7 +36,7 @@
 	<ul class='captions'></ul>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
-	<script src='/assets/js/app.js'></script>
+	<script src='assets/js/app.js'></script>
 
 </body>
 </html>
