--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 		</div>
 	</div>
 
-	<ul class='captions'></ul>
+	<div class='captions'>
+		<ul class='captionlist captionlist--target'></ul>
+		<ul class='captionlist captionlist--src'></ul>
+	</div>
 
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js'></script>
 	<script src='assets/js/app.js'></script>
