Update for Inside frontend 2019

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 					<select id='selslides' class="form-control input-lg">
 						<option value=''>No slides</option>
 						<option data-slide-count=66>20180211-tokyo</option>
+						<option data-slide-count=58>20190518-tokyo</option>
 					</select>
 				</div>
 
@@ -41,15 +42,12 @@
 	</div>
 
 	<div class='captions'>
-		<ul class='captionlist captionlist--target'></ul>
-		<ul class='captionlist captionlist--src'></ul>
+		<ol class='captionlist captionlist--target'></ol>
+		<ol class='captionlist captionlist--src'></ol>
 	</div>
 
 	<div class='slides'></div>
 
-	<script src="https://code.jquery.com/jquery-3.2.1.min.js" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" crossorigin="anonymous"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" crossorigin="anonymous"></script>
 	<script src='assets/js/app.js'></script>
 
 </body>
